// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-datascope 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=" text-left"
      >
        <div
          class="bs-canvas-overlay position-fixed  w-100 h-100"
          id="bs-offcanvas-overlay"
        />
        <div
          class="bs-offcanvas position-fixed  h-100 bs-offcanvas-anim "
          style="width: 0px; right: -600px;"
        >
          <div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                 
                <h5>
                  Register table
                   
                </h5>
              </div>
              <div
                class="col-auto"
              >
                <i
                  aria-hidden="true"
                  class="cursor-pointer fa fa-times mr-1 fa-2x close"
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="offcanvas_handle p-0 m-0 px-2 col-auto"
            />
            <div
              class="col"
            />
          </div>
        </div>
        <h5>
           Create New Data Scope 
          <img
            class="spinner"
            src="/logo.png"
            style="width: 28px;"
          />
        </h5>
        <div
          class=" text-left"
        >
          <form
            class=""
            novalidate=""
          >
            <div
              class="row"
            >
              <div
                class="col-auto"
              >
                <div
                  class="mb-3 form-group"
                >
                  <label
                    class="form-label"
                    for="dbname"
                  >
                    Database Name
                  </label>
                  <input
                    class="form-control form-control-sm"
                    id="dbname"
                    pattern=".+"
                    placeholder="alphanumeric"
                    required=""
                    type="text"
                    value="testdb"
                  />
                  <div
                    class="valid-feedback"
                  >
                    Looks good!
                  </div>
                  <div
                    class="invalid-feedback"
                  >
                    Client side name for Dymium database
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="d-flex col-auto"
                style="align-items: center;"
              >
                <div
                  class="mb-3 form-group"
                >
                  <label
                    class="form-label"
                    for="connection"
                  >
                    Available Connections
                  </label>
                  <select
                    class="form-control form-control-sm"
                    id="connection"
                  >
                    <option
                      value=""
                    >
                      ...
                    </option>
                    <option
                      data-testid="northwind"
                      value="northwind"
                    >
                      northwind
                    </option>
                  </select>
                </div>
                <div
                  class="form-group"
                >
                  <label
                    class="form-label"
                  />
                  <button
                    class="btn btn-dymium btn-sm"
                    style="margin-top: 1.9em;"
                    type="button"
                  >
                    <i
                      class="fa-solid fa-database mr-2"
                    />
                    Add Connection
                  </button>
                </div>
              </div>
              <div
                class="text-left col"
              />
            </div>
            <div
              class="card mb-3 card"
              id="adventureworks"
            >
              <div
                class="card-header"
              >
                <div
                  class="row"
                >
                  <div
                    class="thickblue col-auto"
                    style="padding-top: 2px; font-size: 1.2em;"
                  >
                    <i
                      class="fa-solid fa-database mr-2"
                    />
                    Connection: 
                    adventureworks
                  </div>
                  <div
                    class="col"
                  >
                    <button
                      class="btn btn-dymium btn-sm"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="fa fa-table mr-1"
                      />
                      Add Table
                    </button>
                  </div>
                  <div
                    class="text-right col-auto"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-trash blue trash"
                    />
                  </div>
                </div>
              </div>
              <div
                class="p-0 mx-0 card-body"
              />
            </div>
            <button
              class="mt-4 btn btn-dymium btn-sm"
              type="submit"
            >
              Apply
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class=" text-left"
    >
      <div
        class="bs-canvas-overlay position-fixed  w-100 h-100"
        id="bs-offcanvas-overlay"
      />
      <div
        class="bs-offcanvas position-fixed  h-100 bs-offcanvas-anim "
        style="width: 0px; right: -600px;"
      >
        <div>
          <div
            class="row"
          >
            <div
              class="col"
            >
               
              <h5>
                Register table
                 
              </h5>
            </div>
            <div
              class="col-auto"
            >
              <i
                aria-hidden="true"
                class="cursor-pointer fa fa-times mr-1 fa-2x close"
              />
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="offcanvas_handle p-0 m-0 px-2 col-auto"
          />
          <div
            class="col"
          />
        </div>
      </div>
      <h5>
         Create New Data Scope 
        <img
          class="spinner"
          src="/logo.png"
          style="width: 28px;"
        />
      </h5>
      <div
        class=" text-left"
      >
        <form
          class=""
          novalidate=""
        >
          <div
            class="row"
          >
            <div
              class="col-auto"
            >
              <div
                class="mb-3 form-group"
              >
                <label
                  class="form-label"
                  for="dbname"
                >
                  Database Name
                </label>
                <input
                  class="form-control form-control-sm"
                  id="dbname"
                  pattern=".+"
                  placeholder="alphanumeric"
                  required=""
                  type="text"
                  value="testdb"
                />
                <div
                  class="valid-feedback"
                >
                  Looks good!
                </div>
                <div
                  class="invalid-feedback"
                >
                  Client side name for Dymium database
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="d-flex col-auto"
              style="align-items: center;"
            >
              <div
                class="mb-3 form-group"
              >
                <label
                  class="form-label"
                  for="connection"
                >
                  Available Connections
                </label>
                <select
                  class="form-control form-control-sm"
                  id="connection"
                >
                  <option
                    value=""
                  >
                    ...
                  </option>
                  <option
                    data-testid="northwind"
                    value="northwind"
                  >
                    northwind
                  </option>
                </select>
              </div>
              <div
                class="form-group"
              >
                <label
                  class="form-label"
                />
                <button
                  class="btn btn-dymium btn-sm"
                  style="margin-top: 1.9em;"
                  type="button"
                >
                  <i
                    class="fa-solid fa-database mr-2"
                  />
                  Add Connection
                </button>
              </div>
            </div>
            <div
              class="text-left col"
            />
          </div>
          <div
            class="card mb-3 card"
            id="adventureworks"
          >
            <div
              class="card-header"
            >
              <div
                class="row"
              >
                <div
                  class="thickblue col-auto"
                  style="padding-top: 2px; font-size: 1.2em;"
                >
                  <i
                    class="fa-solid fa-database mr-2"
                  />
                  Connection: 
                  adventureworks
                </div>
                <div
                  class="col"
                >
                  <button
                    class="btn btn-dymium btn-sm"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-table mr-1"
                    />
                    Add Table
                  </button>
                </div>
                <div
                  class="text-right col-auto"
                >
                  <i
                    aria-hidden="true"
                    class="fa fa-trash blue trash"
                  />
                </div>
              </div>
            </div>
            <div
              class="p-0 mx-0 card-body"
            />
          </div>
          <button
            class="mt-4 btn btn-dymium btn-sm"
            type="submit"
          >
            Apply
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`add-datascope 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=" text-left"
      >
        <div
          class="bs-canvas-overlay-show position-fixed  w-100 h-100"
          id="bs-offcanvas-overlay"
        />
        <div
          class="bs-offcanvas position-fixed  h-100 bs-offcanvas-anim "
          style="width: 600px; right: 0px;"
        >
          <div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                 
                <h5>
                  Register table
                   
                </h5>
              </div>
              <div
                class="col-auto"
              >
                <i
                  aria-hidden="true"
                  class="cursor-pointer fa fa-times mr-1 fa-2x close"
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="offcanvas_handle p-0 m-0 px-2 col-auto"
            />
            <div
              class="col"
            >
              <div>
                <form
                  class=""
                  novalidate=""
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-auto"
                    >
                      <div
                        class="mb-3 form-group"
                      >
                        <label
                          class="form-label"
                          for="dbname"
                        >
                          Schema Name
                        </label>
                        <div
                          class="rbt has-aux"
                          style="outline: none; position: relative;"
                          tabindex="-1"
                        >
                          <div
                            style="display: flex; flex: 1; height: 100%; position: relative;"
                          >
                            <input
                              aria-autocomplete="both"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              autocomplete="off"
                              class="rbt-input-main form-control rbt-input form-control-sm"
                              placeholder="Choose schema..."
                              role="combobox"
                              type="text"
                              value=""
                            />
                            <input
                              aria-hidden="true"
                              class="rbt-input-hint"
                              readonly=""
                              style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                              tabindex="-1"
                              value=""
                            />
                          </div>
                          <div
                            class="rbt-aux"
                          >
                            <button
                              aria-label="Clear"
                              class="close btn-close rbt-close rbt-close-sm"
                              type="button"
                            >
                              <span
                                aria-hidden="true"
                                class="rbt-close-content"
                              >
                                ×
                              </span>
                              <span
                                class="sr-only visually-hidden"
                              >
                                Clear
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="valid-feedback"
                        >
                          Looks good!
                        </div>
                        <div
                          class="invalid-feedback"
                        >
                          Client side name for Dymium database
                        </div>
                      </div>
                    </div>
                    <div
                      class="col"
                    />
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <h5>
           Create New Data Scope 
          <img
            class="spinner"
            src="/logo.png"
            style="width: 28px;"
          />
        </h5>
        <div
          class=" text-left"
        >
          <form
            class=""
            novalidate=""
          >
            <div
              class="row"
            >
              <div
                class="col-auto"
              >
                <div
                  class="mb-3 form-group"
                >
                  <label
                    class="form-label"
                    for="dbname"
                  >
                    Database Name
                  </label>
                  <input
                    class="form-control form-control-sm"
                    id="dbname"
                    pattern=".+"
                    placeholder="alphanumeric"
                    required=""
                    type="text"
                    value="testdb"
                  />
                  <div
                    class="valid-feedback"
                  >
                    Looks good!
                  </div>
                  <div
                    class="invalid-feedback"
                  >
                    Client side name for Dymium database
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="d-flex col-auto"
                style="align-items: center;"
              >
                <div
                  class="mb-3 form-group"
                >
                  <label
                    class="form-label"
                    for="connection"
                  >
                    Available Connections
                  </label>
                  <select
                    class="form-control form-control-sm"
                    id="connection"
                  >
                    <option
                      value=""
                    >
                      ...
                    </option>
                    <option
                      data-testid="northwind"
                      value="northwind"
                    >
                      northwind
                    </option>
                  </select>
                </div>
                <div
                  class="form-group"
                >
                  <label
                    class="form-label"
                  />
                  <button
                    class="btn btn-dymium btn-sm"
                    style="margin-top: 1.9em;"
                    type="button"
                  >
                    <i
                      class="fa-solid fa-database mr-2"
                    />
                    Add Connection
                  </button>
                </div>
              </div>
              <div
                class="text-left col"
              />
            </div>
            <div
              class="card mb-3 card"
              id="adventureworks"
            >
              <div
                class="card-header"
              >
                <div
                  class="row"
                >
                  <div
                    class="thickblue col-auto"
                    style="padding-top: 2px; font-size: 1.2em;"
                  >
                    <i
                      class="fa-solid fa-database mr-2"
                    />
                    Connection: 
                    adventureworks
                  </div>
                  <div
                    class="col"
                  >
                    <button
                      class="btn btn-dymium btn-sm"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="fa fa-table mr-1"
                      />
                      Add Table
                    </button>
                  </div>
                  <div
                    class="text-right col-auto"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-trash blue trash"
                    />
                  </div>
                </div>
              </div>
              <div
                class="p-0 mx-0 card-body"
              />
            </div>
            <button
              class="mt-4 btn btn-dymium btn-sm"
              type="submit"
            >
              Apply
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class=" text-left"
    >
      <div
        class="bs-canvas-overlay-show position-fixed  w-100 h-100"
        id="bs-offcanvas-overlay"
      />
      <div
        class="bs-offcanvas position-fixed  h-100 bs-offcanvas-anim "
        style="width: 600px; right: 0px;"
      >
        <div>
          <div
            class="row"
          >
            <div
              class="col"
            >
               
              <h5>
                Register table
                 
              </h5>
            </div>
            <div
              class="col-auto"
            >
              <i
                aria-hidden="true"
                class="cursor-pointer fa fa-times mr-1 fa-2x close"
              />
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="offcanvas_handle p-0 m-0 px-2 col-auto"
          />
          <div
            class="col"
          >
            <div>
              <form
                class=""
                novalidate=""
              >
                <div
                  class="row"
                >
                  <div
                    class="col-auto"
                  >
                    <div
                      class="mb-3 form-group"
                    >
                      <label
                        class="form-label"
                        for="dbname"
                      >
                        Schema Name
                      </label>
                      <div
                        class="rbt has-aux"
                        style="outline: none; position: relative;"
                        tabindex="-1"
                      >
                        <div
                          style="display: flex; flex: 1; height: 100%; position: relative;"
                        >
                          <input
                            aria-autocomplete="both"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            autocomplete="off"
                            class="rbt-input-main form-control rbt-input form-control-sm"
                            placeholder="Choose schema..."
                            role="combobox"
                            type="text"
                            value=""
                          />
                          <input
                            aria-hidden="true"
                            class="rbt-input-hint"
                            readonly=""
                            style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                            tabindex="-1"
                            value=""
                          />
                        </div>
                        <div
                          class="rbt-aux"
                        >
                          <button
                            aria-label="Clear"
                            class="close btn-close rbt-close rbt-close-sm"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="rbt-close-content"
                            >
                              ×
                            </span>
                            <span
                              class="sr-only visually-hidden"
                            >
                              Clear
                            </span>
                          </button>
                        </div>
                      </div>
                      <div
                        class="valid-feedback"
                      >
                        Looks good!
                      </div>
                      <div
                        class="invalid-feedback"
                      >
                        Client side name for Dymium database
                      </div>
                    </div>
                  </div>
                  <div
                    class="col"
                  />
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <h5>
         Create New Data Scope 
        <img
          class="spinner"
          src="/logo.png"
          style="width: 28px;"
        />
      </h5>
      <div
        class=" text-left"
      >
        <form
          class=""
          novalidate=""
        >
          <div
            class="row"
          >
            <div
              class="col-auto"
            >
              <div
                class="mb-3 form-group"
              >
                <label
                  class="form-label"
                  for="dbname"
                >
                  Database Name
                </label>
                <input
                  class="form-control form-control-sm"
                  id="dbname"
                  pattern=".+"
                  placeholder="alphanumeric"
                  required=""
                  type="text"
                  value="testdb"
                />
                <div
                  class="valid-feedback"
                >
                  Looks good!
                </div>
                <div
                  class="invalid-feedback"
                >
                  Client side name for Dymium database
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="d-flex col-auto"
              style="align-items: center;"
            >
              <div
                class="mb-3 form-group"
              >
                <label
                  class="form-label"
                  for="connection"
                >
                  Available Connections
                </label>
                <select
                  class="form-control form-control-sm"
                  id="connection"
                >
                  <option
                    value=""
                  >
                    ...
                  </option>
                  <option
                    data-testid="northwind"
                    value="northwind"
                  >
                    northwind
                  </option>
                </select>
              </div>
              <div
                class="form-group"
              >
                <label
                  class="form-label"
                />
                <button
                  class="btn btn-dymium btn-sm"
                  style="margin-top: 1.9em;"
                  type="button"
                >
                  <i
                    class="fa-solid fa-database mr-2"
                  />
                  Add Connection
                </button>
              </div>
            </div>
            <div
              class="text-left col"
            />
          </div>
          <div
            class="card mb-3 card"
            id="adventureworks"
          >
            <div
              class="card-header"
            >
              <div
                class="row"
              >
                <div
                  class="thickblue col-auto"
                  style="padding-top: 2px; font-size: 1.2em;"
                >
                  <i
                    class="fa-solid fa-database mr-2"
                  />
                  Connection: 
                  adventureworks
                </div>
                <div
                  class="col"
                >
                  <button
                    class="btn btn-dymium btn-sm"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-table mr-1"
                    />
                    Add Table
                  </button>
                </div>
                <div
                  class="text-right col-auto"
                >
                  <i
                    aria-hidden="true"
                    class="fa fa-trash blue trash"
                  />
                </div>
              </div>
            </div>
            <div
              class="p-0 mx-0 card-body"
            />
          </div>
          <button
            class="mt-4 btn btn-dymium btn-sm"
            type="submit"
          >
            Apply
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
